# ots-arcgis-feed

./: .gitignore  README.md  pyproject.toml
ots_arcgis_feed/: app.py  arcgis_client.py  cot_generator.py  default_config.py  feed_manager.py
ots_arcgis_feed/ui/: index.html
ots_arcgis_feed/ui/assets/: index-CHV5tyv5.js  index-CKoNYPy6.css
